--- a/templates/index.html
+++ b/templates/index.html
@@ -15,37 +15,35 @@
 		<canvas id="space"></canvas>
 		<div class="container">
 			<!-- Creativity Fade in -->
-			<div class="animateClass">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12 col-centered">
-						<div class="creativity">
-							<span>C</span>
-							<span>R</span>
-							<span>E</span>
-							<span>A</span>
-							<span>T</span>
-							<span>I</span>
-							<span>V</span>
-							<span>I</span>
-							<span>T</span>
-							<span>Y</span>
-						</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-centered">
+					<div class="animateClass creativity">
+						<span>C</span>
+						<span>R</span>
+						<span>E</span>
+						<span>A</span>
+						<span>T</span>
+						<span>I</span>
+						<span>V</span>
+						<span>E</span>
 					</div>
 				</div>
-				<!-- <div class="row">
-					<div class=" col-md-6 col-centered">
-						<div class="animateClass2 portal">
-							<span>
-								P
-								O
-								R
-								T
-								A
-								L
-							</span>
-						</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-centered">
+					<div class="animateClass2 universe">
+					<p>
+						<span>U</span>
+						<span>N</span>
+						<span>I</span>
+						<span>V</span>
+						<span>E</span>
+						<span>R</span>
+						<span>S</span>
+						<span>E</span>
+					</p>
 					</div>
-				</div> -->
+				</div>
 			</div>
 		</div>
 		<script src="../static/js/stars.js"></script>
