--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,6 +1,6 @@
 html, body {
 	/*background-color: black;*/
-	font-family: Verdana;
+	font-family: Just Another Hand, Verdana, sans-serif;
 	height: 100%;
 	margin: 0;
 	color: white;
@@ -11,16 +11,16 @@ canvas {
 	width: 100%;
 	height: 100%;
 	background: #111a22;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .creativity {
 	font-size: 6em;
-	font-family: Just Another Hand, Verdana, sans-serif;
 }
 
 .universe {
 	font-size: 6em;
-	font-family: Just Another Hand, Verdana, sans-serif;
 }
 
 .col-centered {
