--- a/templates/index.html
+++ b/templates/index.html
@@ -16,35 +16,35 @@
 		<div class="container">
 			<!-- Creativity Fade in -->
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-centered">
+				<div class="column">
 					<div class="animateClass creativity">
-						<span>C</span>
-						<span>R</span>
-						<span>E</span>
-						<span>A</span>
-						<span>T</span>
-						<span>I</span>
-						<span>V</span>
-						<span>E</span>
+						<p>
+							<span>C</span>
+							<span>R</span>
+							<span>E</span>
+							<span>A</span>
+							<span>T</span>
+							<span>I</span>
+							<span>V</span>
+							<span>E</span>
+						</p>
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-centered">
 					<div class="animateClass2 universe">
-					<p>
-						<span>U</span>
-						<span>N</span>
-						<span>I</span>
-						<span>V</span>
-						<span>E</span>
-						<span>R</span>
-						<span>S</span>
-						<span>E</span>
-					</p>
+						<p>
+							<span>U</span>
+							<span>N</span>
+							<span>I</span>
+							<span>V</span>
+							<span>E</span>
+							<span>R</span>
+							<span>S</span>
+							<span>E</span>
+						</p>
 					</div>
+					
 				</div>
 			</div>
+			<button type="button" class="btn btn-lg">Enter</button>
 		</div>
 		<script src="../static/js/stars.js"></script>
 	</body>
