--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,7 @@
 	</head>
 
 	<body>
-		<canvas id="space"></canvas>
-		<div class="container">
+		<div class="container stars stars2 stars3">
 			<!-- Creativity Fade in -->
 			<div class="row">
 				<div class="column">
@@ -44,8 +43,6 @@
 					
 				</div>
 			</div>
-			<button type="button" class="btn btn-lg">Enter</button>
 		</div>
-		<script src="../static/js/stars.js"></script>
 	</body>
 </html>
