--- a/templates/add.html
+++ b/templates/add.html
@@ -14,21 +14,24 @@
 	<body>
 		<div class="container">
 			<h1 font-family="Just Another Hand"><u>Submit a new idea</u></h1>
-			<div class="form-group">
-				<label for="title">Title:</label>
-				<input type="text" class="form-control" name="title" placeholder="What is the name of your idea?">
-			</div>	
-			<div class="form-group">
-				<label for="category">Category:</label>
-				<input type="text" class="form-control" name="category" placeholder="e.g gaming, software, tools, etc.">
-			</div>		
-			<div class="form-group">
-				<label for="description">Description:</label>
-				<textarea class="form-control" rows="10" id="description" placeholder="Enter the specific details of your idea here!"></textarea>
-			</div>		
-			<button type="submit" class="btn btn-lg btn-success">
-      			<span class="glyphicon glyphicon-pencil"></span> 
-      			Submit idea
+			<form action="{{ url_for('ideas') }}" method="post" role="form">
+				<div class="form-group">
+					<label for="title">Title:</label>
+					<input type="text" class="form-control" name="title" placeholder="What is the name of your idea?">
+				</div>	
+				<div class="form-group">
+					<label for="category">Category:</label>
+					<input type="text" class="form-control" name="category" placeholder="e.g gaming, software, tools, etc.">
+				</div>		
+				<div class="form-group">
+					<label for="description">Description:</label>
+					<textarea class="form-control" rows="10" id="description" placeholder="Enter the specific details of your idea here!"></textarea>
+				</div>		
+				<button type="submit" class="btn btn-lg btn-success">
+	      			<span class="glyphicon glyphicon-pencil"></span> 
+	      			Submit idea
+	      		</button>
+      		</form>
 		</div>
 	</body>
 </html>
