--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 					</div>	
 				</div>
 				<a style="font-size: 2.5em; position: absolute; top: 80%; left: 35%" class="ghost-button" href="{{ url_for('add') }}">ADD</a>
-				<a style="font-size: 2.5em; position: absolute; top: 80%; right: 35%" class="ghost-button" href="#">EXPLORE</a>
+				<a style="font-size: 2.5em; position: absolute; top: 80%; right: 35%" class="ghost-button" href="{{ url_for('ideas') }}">EXPLORE</a>
 			</div>
 		</div>
 	</body>
