Added idea table that fetches SQL data

--- a/static/css/add.css
+++ b/static/css/add.css
@@ -10,3 +10,9 @@ h1 {
 	font-family: Just Another Hand, Verdana, sans-serif;
 	font-size: 5em;
 }
+h2 {
+	font-size: 3em;
+}
+p {
+	font-size: 2em;
+}
