--- a/templates/add.html
+++ b/templates/add.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="container">
 			<h1 font-family="Just Another Hand"><u>Submit a new idea</u></h1>
-			<form method="post" action="{{ url_for('ideas') }}" role="form">
+			<form method="post" action="{{ url_for('ideaAdded') }}" role="form">
 				<div class="form-group">
 					<label for="title">Title:</label>
 					<input type="text" class="form-control" name="title" placeholder="What is the name of your idea?">
