--- a/templates/ideas.html
+++ b/templates/ideas.html
@@ -12,7 +12,28 @@
 	</head>
 
 	<body>
-		<form method="post">
-		</form>
+		<!-- Main header -->
+		<div class="container">
+			<div class="panel panel-default col-lg-10" style="color: black; font-family: Verdana">
+				<div class="panel-heading"><h4><b>Ideas</b></h4><i>Click an idea for more information</i></div>
+				<div class="panel-body" style="min-height: 600px; max-height: 600px; overflow-y:scroll;">
+					<table class = "table">
+						<thead>
+							<th> Idea Name </th>
+						</thead>
+						<tbody>
+						{% for value in rows %}
+						<tr>
+							{% for elem in value %}
+					        <td><a href="http://www.Google.com">{{ elem }}</a></td>
+					        {% endfor %}
+						</tr>
+						</a>
+						{% endfor %}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
