--- a/static/css/add.css
+++ b/static/css/add.css
@@ -1,7 +1,7 @@
 html, body {
 	background-color: black;
 	height: 100%;
-	font-family: Verdana, sans-serif;
+	font-family: Just Another Hand, Verdana, sans-serif;
 	background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
   	overflow: hidden;
   	color: white;
@@ -12,7 +12,9 @@ h1 {
 }
 h2 {
 	font-size: 3em;
+	word-wrap:break-word;
 }
 p {
 	font-size: 2em;
+	word-wrap:break-word;
 }
