--- a/templates/add.html
+++ b/templates/add.html
@@ -9,11 +9,33 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   		<link href='http://fonts.googleapis.com/css?family=Just+Another+Hand' rel='stylesheet' type='text/css'>
+
+  		<style type="text/css">
+  			.navbar-default .navbar-brand
+			{
+			    position: absolute;
+			    width: 100%;
+			    left: 0;
+			    text-align: center;
+			    margin:0 auto;
+			    background-color: #292735;
+			}
+			.navbar-toggle {
+			    z-index:3;
+			}
+  		</style>
+  		<nav class="navbar navbar-default navbar-fixed-top">
+  			<div class="container-fluid">
+  				<div class="navbar-header">
+  					<a class="navbar-brand" href="{{ url_for('index') }}" style="font-family: Just Another Hand, Verdana, sans-serif; font-size: 3em; color: white">Creative Universe</a>
+  				</div>
+  			</div>
+  		</nav>
 	</head>
 
 	<body>
 		<div class="container">
-			<h1 font-family="Just Another Hand"><u>Submit a new idea</u></h1>
+			<h1><u>Submit a new idea</u></h1>
 			<form method="post" action="{{ url_for('ideaAdded') }}" role="form">
 				<div class="form-group">
 					<label for="title">Title:</label>
